@@ -1,21 +1,20 @@
 package com.se.softengineer.controller;
 
-import com.alibaba.fastjson2.JSON;
-import com.alibaba.fastjson2.JSONArray;
 import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
 import com.baomidou.mybatisplus.core.metadata.IPage;
 import com.baomidou.mybatisplus.core.toolkit.StringUtils;
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
-import com.se.softengineer.algorithm.caculate.CaculateSample;
-import com.se.softengineer.entity.*;
+import com.se.softengineer.entity.IndexSym;
+import com.se.softengineer.entity.IndexSymNode;
+import com.se.softengineer.entity.UsersData;
 import com.se.softengineer.mapper.IndexSymNodeMapper;
 import com.se.softengineer.service.IndexSymNodeService;
 import com.se.softengineer.service.IndexSymService;
 import com.se.softengineer.service.SampleService;
 import com.se.softengineer.service.UsersDataService;
+import com.se.softengineer.utils.AnalyExcel;
 import com.se.softengineer.utils.QueryPageParam;
 import com.se.softengineer.utils.Result;
-import com.se.softengineer.utils.AnalyExcel;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.web.bind.annotation.*;
@@ -29,10 +28,11 @@ import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.DocumentBuilderFactory;
 import java.io.*;
 import java.nio.channels.FileChannel;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.HashMap;
-import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Objects;
 
 /**
  * @author xiaxue
@@ -44,7 +44,7 @@ public class ImportController {
     //获取当前用户名
     public String userName;
     //从excel中读到的临时数据
-    public static List<String[]> cells=new ArrayList<>();
+    public static List<String[]> cells = new ArrayList<>();
     //每个用户都有一个tableName
     public static String indexSymTableName;
     public static String indexDataTableName;
@@ -53,16 +53,16 @@ public class ImportController {
     public static String filesName;
 
     //创建指标数据表的sql语句
-    public static String createSql=new String();
+    public static String createSql = "";
 
     //标记是指标体系文件还是数据文件
-    public static String fileType=new String();
+    public static String fileType = "";
     //文件存储路径
     @Value("${file-save-path}")
     private String fileSavePath;
     private String file_Path;
     //标记是否是XML类型
-    String FT="";
+    String FT = "";
 
     @Autowired
     private IndexSymNodeService indexSymNodeService;
@@ -83,40 +83,36 @@ public class ImportController {
 
     /**
      * @author xiaxue
-     * @param file
-     * @throws IOException
      */
     @PostMapping(value = "/excel/{value}")
     //@RequestParam("file") MultipartFile file
-    public void uploadFileByExcel(@RequestParam(value = "file",required = false) MultipartFile file, @PathVariable("value") String v) throws IOException {
-        FT="";
+    public void uploadFileByExcel(@RequestParam(value = "file", required = false) MultipartFile file, @PathVariable("value") String v) throws IOException {
+        FT = "";
         cells.clear();
         String filename = file.getOriginalFilename();
-        fileType=v;
-        System.out.println("类型："+fileType);
-        filesName=file.getOriginalFilename().substring(0,file.getOriginalFilename().indexOf("."));
+        fileType = v;
+        System.out.println("类型：" + fileType);
+        filesName = Objects.requireNonNull(file.getOriginalFilename()).substring(0, file.getOriginalFilename().indexOf("."));
         System.out.println(filesName);
         //保存到本地
         String filePath = savaFileByNio((FileInputStream) file.getInputStream(), filename);
-        List<String[]> l=AnalyExcel.readExcelFile(file,1);
-        cells=l;
+        cells = AnalyExcel.readExcelFile(file, 1);
         //keepData(l);
     }
 
     /**
      * @author xiaxue
-     * @param file
      */
     @RequestMapping("/xml/{value}")
-    public void loadFileByXML(@RequestParam(value = "file",required = false) MultipartFile file, @PathVariable("value") String v) throws IOException {
-        FT="XML";
+    public void loadFileByXML(@RequestParam(value = "file", required = false) MultipartFile file, @PathVariable("value") String v) throws IOException {
+        FT = "XML";
         //清空数组
         cells.clear();
         String filename = file.getOriginalFilename();
 
-        fileType=v;
-        filesName=file.getOriginalFilename().substring(0,file.getOriginalFilename().indexOf("."));
-        System.out.println("文件名："+filesName);
+        fileType = v;
+        filesName = Objects.requireNonNull(file.getOriginalFilename()).substring(0, file.getOriginalFilename().indexOf("."));
+        System.out.println("文件名：" + filesName);
         //保存到本地
         String filePath = savaFileByNio((FileInputStream) file.getInputStream(), filename);
         try {
@@ -145,23 +141,20 @@ public class ImportController {
                     //System.out.print("属性名:" + attr.getNodeName());
                     //System.out.println(" --- 属性值:" + attr.getNodeValue());
                 }
-                List<String[]> l=new ArrayList<>();
                 NodeList childNodes = book.getChildNodes();
-                String[] temp=new String[5];
-                int j=0;
+                String[] temp = new String[5];
+                int j = 0;
                 for (int k = 0; k < childNodes.getLength(); k++) {
                     // 区分,去掉空格和换行
-                    if(childNodes.item(k).getNodeName().equals("node")){
-                        NodeList childNode=childNodes.item(k).getChildNodes();
+                    if (childNodes.item(k).getNodeName().equals("node")) {
+                        NodeList childNode = childNodes.item(k).getChildNodes();
                         moreNode(childNode);
-                    }
-
-                    else if (childNodes.item(k).getNodeType() == Node.ELEMENT_NODE) {
+                    } else if (childNodes.item(k).getNodeType() == Node.ELEMENT_NODE) {
                         // 获取element类型的节点和节点值
                         System.out.print("节点名：" + childNodes.item(k).getNodeName());
                         //System.out.print(" --- 节点值：" + childNodes.item(k).getFirstChild().getNodeValue());
-                        System.out.println(" --- 节点值："+childNodes.item(k).getTextContent());
-                        temp[j++]=childNodes.item(k).getTextContent();
+                        System.out.println(" --- 节点值：" + childNodes.item(k).getTextContent());
+                        temp[j++] = childNodes.item(k).getTextContent();
                     }
                 }
                 cells.add(temp);
@@ -174,20 +167,22 @@ public class ImportController {
     }
 
     @RequestMapping("/keepExcel/{username}")
-    public Result keep(@PathVariable("username") String name){
-        userName=name;
-        System.out.println("用户名：  "+name);
+    public Result keep(@PathVariable("username") String name) {
+        userName = name;
+        System.out.println("用户名：  " + name);
         return keepData(cells);
     }
+
     /**
      * 保存读取的indexSym,保存到List和数据库
+     *
      * @param list
      */
-    public Result keepData(List<String[]> list){
-        if(fileType.equals(""))
+    public Result keepData(List<String[]> list) {
+        if (fileType.equals(""))
             return Result.fail();
-        System.out.println("文件类型:  "+fileType);
-        if(fileType.equals("indexSym")) {
+        System.out.println("文件类型:  " + fileType);
+        if (fileType.equals("indexSym")) {
             //头结点
 //            List<String> headNode=new ArrayList<>();
 //            headNode.add(filesName);
@@ -196,60 +191,57 @@ public class ImportController {
 //            headNode.add("0");
             //int headNodeID=nodeService.getHeadID(indexSymTableName,filesName);
             //拼接新表名
-            indexSymTableName = userName+"_"+filesName;
-            System.out.println("指标体系名字： "+indexSymTableName);
+            indexSymTableName = userName + "_" + filesName;
+            System.out.println("指标体系名字： " + indexSymTableName);
             /* 如果上传了同名的指标体系，直接覆盖; 同时在user_data数据库中写入时也要判断是否有重复 by wxy*/
             indexSymNodeService.dropExistTable(indexSymTableName);
             indexSymNodeService.createIndexSymTable(indexSymTableName);
             /* 先插入根节点 */
-            if(indexSymNodeService.insertIntoTable(indexSymTableName,filesName,1,1,0)<=0)
+            if (indexSymNodeService.insertIntoTable(indexSymTableName, filesName, 1, 1, 0) <= 0)
                 return Result.fail();
-            if(FT.equals("XML")){
+            if (FT.equals("XML")) {
                 for (String[] l : list) {
-                    System.out.println("————————————————————————————————————"+l[0]+"  "+ Integer.parseInt(l[1])+"  "+ Double.parseDouble(l[2])+"  "+ Integer.parseInt(l[3])+1);
-                    indexSymNodeMapper.insertIntoSheet(indexSymTableName,Integer.parseInt(l[1])+1, l[0], Integer.parseInt(l[2]), Double.parseDouble(l[3]), Integer.parseInt(l[4])+1);
+                    System.out.println("————————————————————————————————————" + l[0] + "  " + Integer.parseInt(l[1]) + "  " + Double.parseDouble(l[2]) + "  " + Integer.parseInt(l[3]) + 1);
+                    indexSymNodeMapper.insertIntoSheet(indexSymTableName, Integer.parseInt(l[1]) + 1, l[0], Integer.parseInt(l[2]), Double.parseDouble(l[3]), Integer.parseInt(l[4]) + 1);
                     //return Result.fail();
                 }
-            }else{
+            } else {
                 for (String[] l : list) {
-                    System.out.println(l[0]+"  "+ Integer.parseInt(l[1])+"  "+ Double.parseDouble(l[2])+"  "+ Integer.parseInt(l[3])+1);
-                    if(indexSymNodeService.insertIntoTable(indexSymTableName, l[0], Integer.parseInt(l[1]), Double.parseDouble(l[2]), Integer.parseInt(l[3])+1)<=0)
+                    System.out.println(l[0] + "  " + Integer.parseInt(l[1]) + "  " + Double.parseDouble(l[2]) + "  " + Integer.parseInt(l[3]) + 1);
+                    if (indexSymNodeService.insertIntoTable(indexSymTableName, l[0], Integer.parseInt(l[1]), Double.parseDouble(l[2]), Integer.parseInt(l[3]) + 1) <= 0)
                         return Result.fail();
                 }
             }
-        }else if(fileType.equals("indexdata")){
-            indexDataTableName=userName+"_"+filesName+"_data";
-            System.out.println("指标数据名字: "+indexDataTableName);
+        } else if (fileType.equals("indexdata")) {
+            indexDataTableName = userName + "_" + filesName + "_data";
+            System.out.println("指标数据名字: " + indexDataTableName);
             //拼接sql语句，因为指标个数不确定。
-            String[] temp=list.get(1);
-            int column=temp.length-1;//指标个数
+            //指标个数
             try {
                 create_data_table(indexSymTableName);
-            }catch (Exception e){
+            } catch (Exception e) {
                 return Result.fail();
             }
-            String name = null;
-            int i=0;
+            int i;
             for (String[] l : list) {
-                List<String> ins=new ArrayList<>();
-                i=0;
-                for(String t:l){
+                List<String> ins = new ArrayList<>();
+                i = 0;
+                for (String t : l) {
                     System.out.println(t);
-                    if(i==0){
-                        name=t;
+                    if (i == 0) {
 
-                    }else{
+                    } else {
                         ins.add(t);
                     }
                     i++;
                 }
-                try{
-                    for(String s:ins){
+                try {
+                    for (String s : ins) {
                         System.out.println(s);
                     }
-                    if(!sampleService.insertDataTable(indexDataTableName,ins))
+                    if (!sampleService.insertDataTable(indexDataTableName, ins))
                         return Result.fail();
-                }catch(Exception e){
+                } catch (Exception e) {
                     System.out.println("数据文件和节点文件不对应！");
                     return Result.fail();
                 }
@@ -262,24 +254,24 @@ public class ImportController {
      * @author xiaxue
      * 递归调用处理嵌套的node
      */
-    public void moreNode(NodeList childNodes){
-        String[] temp=new String[5];
-        int j=0;
+    public void moreNode(NodeList childNodes) {
+        String[] temp = new String[5];
+        int j = 0;
         for (int k = 0; k < childNodes.getLength(); k++) {
             // 区分,去掉空格和换行符
             if (childNodes.item(k).getNodeType() == Node.ELEMENT_NODE) {
                 // 获取element类型的节点和节点值
-                if(!childNodes.item(k).getNodeName().equals("node")) {
+                if (!childNodes.item(k).getNodeName().equals("node")) {
                     //System.out.print("节点名：" + childNodes.item(k).getNodeName());
                     //System.out.print(" --- 节点值：" + childNodes.item(k).getFirstChild().getNodeValue());
                     //System.out.println(" --- 节点值：" + childNodes.item(k).getTextContent());
                 }
                 //出现了嵌套node
-                if(childNodes.item(k).getNodeName().equals("node")){
-                    NodeList childNode=childNodes.item(k).getChildNodes();
+                if (childNodes.item(k).getNodeName().equals("node")) {
+                    NodeList childNode = childNodes.item(k).getChildNodes();
                     moreNode(childNode);
                 }
-                temp[j++]=childNodes.item(k).getTextContent();
+                temp[j++] = childNodes.item(k).getTextContent();
             }
         }
         cells.add(temp);
@@ -297,6 +289,7 @@ public class ImportController {
 
     /**
      * 根据指标体系生成对应的数据表（叶子节点是表头
+     *
      * @param table_name 指标体系表
      * @return 是否成功建表（啊？？怎么成功建了表return回来的是false啊
      * http://localhost:8877/import/create_data_table?table_name=indexsym
@@ -307,9 +300,9 @@ public class ImportController {
         indexSym.get_leaves();
         int leaf_num = indexSym.getLeaf_num();
         List<String> columnNames = new ArrayList<>();
-        for(int i = 1; i <= leaf_num; i ++)
+        for (int i = 1; i <= leaf_num; i++)
             columnNames.add("X" + i);
-        indexDataTableName=table_name+"_data";
+        indexDataTableName = table_name + "_data";
         /* 如果已经上传过，直接覆盖 */
         sampleService.dropExistTable(indexDataTableName);
         return sampleService.createDataTable(indexDataTableName, columnNames);
@@ -320,31 +313,31 @@ public class ImportController {
      */
     @PostMapping(value = "/json")
     //@RequestParam("file") MultipartFile file
-    public Result uploadFileByJson(@RequestParam(value = "file",required = false) MultipartFile file) {
+    public Result uploadFileByJson(@RequestParam(value = "file", required = false) MultipartFile file) {
         String filename = file.getOriginalFilename();
         System.out.println(filename);
         //文件名称（不含后缀名）
-        filesName=file.getOriginalFilename().substring(0,file.getOriginalFilename().indexOf("."));
+        filesName = Objects.requireNonNull(file.getOriginalFilename()).substring(0, file.getOriginalFilename().indexOf("."));
         //保存到本地
-        String res = null;
+        String res;
         try {
             res = savaFileByNio((FileInputStream) file.getInputStream(), filename);
         } catch (IOException e) {
             e.printStackTrace();
             return Result.fail();
         }
-        return res!=null?Result.success():Result.fail();
+        return res != null ? Result.success() : Result.fail();
     }
 
     /**
-     * @author xiaxue
      * @param fis
      * @param fileName
      * @return
+     * @author xiaxue
      */
     public String savaFileByNio(FileInputStream fis, String fileName) {
         // 这个路径最后是在: 你的项目路径/upload  也就是和src同级
-        this.file_Path = this.fileSavePath+fileName;
+        this.file_Path = this.fileSavePath + fileName;
         // 判断父文件夹是否存在
         File file = new File(this.file_Path);
         //System.out.println(file.getPath());
@@ -369,30 +362,30 @@ public class ImportController {
      * @author lmy
      */
     @RequestMapping("/keepJson")
-    public Result keepJson(@RequestParam String userName){
-        if(this.file_Path==null)
+    public Result keepJson(@RequestParam String userName) {
+        if (this.file_Path == null)
             return Result.fail();
-        List<String> headNode=new ArrayList<>();
+        List<String> headNode = new ArrayList<>();
         headNode.add(filesName);
         headNode.add("0");
         headNode.add("0");
         headNode.add("0");
-        IndexSymNode t=new IndexSymNode();
-        indexSymTableName = userName+"_"+filesName;
+        IndexSymNode t = new IndexSymNode();
+        indexSymTableName = userName + "_" + filesName;
         /* 如果上传了同名的指标体系，直接覆盖; 同时在user_data数据库中写入时也要判断是否有重复 by wxy*/
         indexSymNodeService.dropExistTable(indexSymTableName);
         indexSymNodeService.createIndexSymTable(indexSymTableName);
-        if(indexSymNodeService.insertIntoTable(indexSymTableName,filesName,1,1,0)<=0)
+        if (indexSymNodeService.insertIntoTable(indexSymTableName, filesName, 1, 1, 0) <= 0)
             return Result.fail();
-        boolean result=true;
-        System.out.println(fileSavePath+filesName+".json");
+        boolean result;
+        System.out.println(fileSavePath + filesName + ".json");
         try {
-            result = indexSymNodeService.saveJsonData(indexSymTableName,fileSavePath+filesName+".json");
+            result = indexSymNodeService.saveJsonData(indexSymTableName, fileSavePath + filesName + ".json");
         } catch (IOException e) {
             e.printStackTrace();
-            return  Result.fail();
+            return Result.fail();
         }
-        return result==true?Result.success():Result.fail();
+        return result ? Result.success() : Result.fail();
     }
 
     /**
@@ -400,25 +393,25 @@ public class ImportController {
      */
     @RequestMapping("/downloadJson")
     public void downloadJson(HttpServletResponse response) throws Exception {
-        this.download("example\\example.json",response);
+        this.download("example\\example.json", response);
     }
 
     @RequestMapping("/downloadExcel1")
     public void downloadExcel1(HttpServletResponse response) throws Exception {
-        this.download("example\\indexsymOrigin.xlsx",response);
+        this.download("example\\indexsymOrigin.xlsx", response);
     }
 
     @RequestMapping("/downloadExcel2")
     public void downloadExcel2(HttpServletResponse response) throws Exception {
-        this.download("example\\index.xlsx",response);
+        this.download("example\\index.xlsx", response);
     }
 
     @RequestMapping("/downloadXml")
     public void downloadXml(HttpServletResponse response) throws Exception {
-        this.download("example\\temp.xml",response);
+        this.download("example\\temp.xml", response);
     }
 
-    public void download(String fileName,HttpServletResponse response) throws Exception{
+    public void download(String fileName, HttpServletResponse response) throws Exception {
         //这里写要让前端下载的文件的路径
         File file = new File(this.fileSavePath + fileName);
         //设置编码格式，防止下载的文件内乱码
@@ -430,14 +423,10 @@ public class ImportController {
         response.setContentType("application/octet-stream;charset=UTF-8");
         //如果不设置响应头大小，可能报错：“Excel 已完成文件级验证和修复。此工作簿的某些部分可能已被修复或丢弃”
         response.addHeader("Content-Length", String.valueOf(file.length()));
-        try {
-            //Content-Disposition的作用：告知浏览器以何种方式显示响应返回的文件，用浏览器打开还是以附件的形式下载到本地保存
-            //attachment表示以附件方式下载   inline表示在线打开   "Content-Disposition: inline; filename=文件名.mp3"
-            // filename表示文件的默认名称，因为网络传输只支持URL编码的相关支付，因此需要将文件名URL编码后进行传输,前端收到后需要反编码才能获取到真正的名称
-            response.setHeader("Content-Disposition", "attachment;filename=" + java.net.URLEncoder.encode(realFileName.trim(), "UTF-8"));
-        } catch (UnsupportedEncodingException e1) {
-            e1.printStackTrace();
-        }
+        //Content-Disposition的作用：告知浏览器以何种方式显示响应返回的文件，用浏览器打开还是以附件的形式下载到本地保存
+        //attachment表示以附件方式下载   inline表示在线打开   "Content-Disposition: inline; filename=文件名.mp3"
+        // filename表示文件的默认名称，因为网络传输只支持URL编码的相关支付，因此需要将文件名URL编码后进行传输,前端收到后需要反编码才能获取到真正的名称
+        response.setHeader("Content-Disposition", "attachment;filename=" + java.net.URLEncoder.encode(realFileName.trim(), StandardCharsets.UTF_8));
         //初始化文件流字节缓存
         byte[] buff = new byte[1024];
         //开始写入
@@ -456,24 +445,23 @@ public class ImportController {
         } catch (Exception e) {
             e.printStackTrace();
         } finally {
-            if (bis != null) {
-                try {
-                    bis.close();
-                } catch (IOException e) {
-                    e.printStackTrace();
-                }
+            try {
+                bis.close();
+            } catch (IOException e) {
+                e.printStackTrace();
             }
         }
     }
 
     /**
      * v1.0
+     *
      * @author lmy
      * v2.0
      * @author wxy
      **/
     @RequestMapping("/insertUsersData")
-    public Result insertUsersData()  {
+    public Result insertUsersData() {
         /** v 1.0 点击确认后创建表并插入数据
          int flag=0;
          try{
@@ -497,7 +485,7 @@ public class ImportController {
          * 修改register、update、delete方法
          * 同时注意当没有选择待优化的指标体系时，应该添加点击确认后的错误提示信息
          **/
-        try{
+        try {
             /* 相同名字的指标体系上传时覆盖原有的指标体系，记录写入user_data表时也应该去重 */
             usersDataService.insertIntoTable(userName + "_data", indexDataTableName, indexSymTableName);
         } catch (Exception e) {
@@ -520,11 +508,10 @@ public class ImportController {
 //    }
 
     @PostMapping("/indexSymListPage")
-    public Result nodeListPage(@RequestBody QueryPageParam query){
+    public Result nodeListPage(@RequestBody QueryPageParam query) {
         HashMap param = query.getParam();
-        String tableName = (String)param.get("table_name");
-        String userName = tableName.substring(0, tableName.length() - 5);
-        String queryContent = (String)param.get("queryName");
+        String tableName = (String) param.get("table_name");
+        String queryContent = (String) param.get("queryName");
         System.out.println(tableName);
 
         Page<UsersData> page = new Page();
@@ -537,21 +524,21 @@ public class ImportController {
             lambdaQueryWrapper.like(UsersData::getIndexSymDTName, queryContent);
 
 
-        IPage result = usersDataService.getISDTNamePage(page,tableName,lambdaQueryWrapper);
-        System.out.println("total=="+result.getTotal());
+        IPage result = usersDataService.getISDTNamePage(page, tableName, lambdaQueryWrapper);
+        System.out.println("total==" + result.getTotal());
         return Result.success(result.getRecords(), result.getTotal());
     }
+
     /**
-     * @author
      * @param dbName
-     * @return
-     * 获取用户indexSym表中的所有信息
+     * @return 获取用户indexSym表中的所有信息
      * 点击树节点显示信息
+     * @author
      */
 
     @RequestMapping("/getAllNodeInfo/{dbName}")
-    public Result getAllNodeInfo(@PathVariable("dbName")String dbName){
-        List<IndexSymNode> data= indexSymNodeService.getAllNodeInfo(dbName);
-        return data==null?Result.fail():Result.trans(data);
+    public Result getAllNodeInfo(@PathVariable("dbName") String dbName) {
+        List<IndexSymNode> data = indexSymNodeService.getAllNodeInfo(dbName);
+        return data == null ? Result.fail() : Result.trans(data);
     }
 }
